canonical_kubernetes/kubernetes-dashboard/httproute.yaml
# Kubernetes Dashboard UI
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: schlaepfer # gateway name
    namespace: common
    sectionName: https-schlaepfer
  hostnames:
  - "kubernetes-dashboard.apps.schlaepfer.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    - path:
        type: PathPrefix
        value: /metrics
    backendRefs:
    - name: kubernetes-dashboard-api
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/login
    - path:
        type: PathPrefix
        value: /api/v1/csrftoken/login
    - path:
        type: PathPrefix
        value: /api/v1/me
    backendRefs:
    - name: kubernetes-dashboard-auth
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
